--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -10,123 +10,98 @@
 		<link rel="stylesheet" type="text/css" href="css/cart.css" th:href="@{/css/cart.css}" />
 	</head>
 
-	<body onload="changeNum()">
+	<body>
 		<!--导航部分  begin-->
-		<div class="container" style="margin-top: 5px;">
-			<nav class="navbar navbar-default well-sm" style="padding-left: 0px;" role="navigation">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
-				            <span class="sr-only">切换导航</span>
-				            <span class="icon-bar"></span>
-				            <span class="icon-bar"></span>
-				            <span class="icon-bar"></span>
-        				</button>
-						<a class="navbar-brand" href="#">购物网</a>
-					</div>
-					<div class="collapse navbar-collapse" id="example-navbar-collapse">
-						<ul class="nav navbar-nav pull-left">
-							<li class="active">
-								<a href="index.html">首页</a>
-							</li>
-					
-							<li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-										商品类型
-										<b class="caret"></b>
-									</a>
-									<ul class="dropdown-menu">
-										<li>
-											<a href="products_list.html">百货</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">美妆</a>
-										</li>
-										<li class="divider"></li>
-										
-										<li>
-											<a href="products_list.html">家具</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">男装</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">女装</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">数码</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">母婴</a>
-										</li>
-										<li class="divider"></li>
-									</ul>
-								</li>
-							</li>
-							<li>
-								<a href="#" data-toggle="modal" data-target="#myModal">登录</a>
-							</li>
-							<li>
-								<a href="index.html">安全退出</a>
-							</li>
-							<li>
-								<a href="#" data-toggle="modal" data-target="#register">注册</a>
-							</li>
-							<li>
-								<a href="order_list.html">我的订单</a>
-							</li>
-							<li>
-								<a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"> </span>我的购物车</a>
-							</li>
-						</ul>
-						<div class="input-group col-md-3 pull-right" style="positon:relative;padding: 7px;">
-							<input type="text" class="form-control" placeholder="请输入商品名" />
-							<span class="input-group-btn">  
-					            <button class="btn btn-info btn-search">
-					            	<span class="glyphicon glyphicon-search"></span>
-					            </button>
-							</span>
-						</div>
-					</div>
-				</div>
-			</nav>
-		</div>
+		<!--<div class="container" style="margin-top: 5px;">-->
+			<!--<nav class="navbar navbar-default well-sm" style="padding-left: 0px;" role="navigation">-->
+				<!--<div class="container-fluid">-->
+					<!--<div class="navbar-header">-->
+						<!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">-->
+				            <!--<span class="sr-only">切换导航</span>-->
+				            <!--<span class="icon-bar"></span>-->
+				            <!--<span class="icon-bar"></span>-->
+				            <!--<span class="icon-bar"></span>-->
+        				<!--</button>-->
+						<!--<a class="navbar-brand" href="#">购物网</a>-->
+					<!--</div>-->
+					<!--<div class="collapse navbar-collapse" id="example-navbar-collapse">-->
+						<!--<ul class="nav navbar-nav pull-left">-->
+							<!--<li class="active">-->
+								<!--<a href="index.html">首页</a>-->
+							<!--</li>-->
+					<!---->
+							<!--<li>-->
+								<!--<li class="dropdown">-->
+									<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+										<!--商品类型-->
+										<!--<b class="caret"></b>-->
+									<!--</a>-->
+									<!--<ul class="dropdown-menu">-->
+										<!--<li>-->
+											<!--<a href="products_list.html">百货</a>-->
+										<!--</li>-->
+										<!--<li class="divider"></li>-->
+										<!--<li>-->
+											<!--<a href="products_list.html">美妆</a>-->
+										<!--</li>-->
+										<!--<li class="divider"></li>-->
+										<!---->
+										<!--<li>-->
+											<!--<a href="products_list.html">家具</a>-->
+										<!--</li>-->
+										<!--<li class="divider"></li>-->
+										<!--<li>-->
+											<!--<a href="products_list.html">男装</a>-->
+										<!--</li>-->
+										<!--<li class="divider"></li>-->
+										<!--<li>-->
+											<!--<a href="products_list.html">女装</a>-->
+										<!--</li>-->
+										<!--<li class="divider"></li>-->
+										<!--<li>-->
+											<!--<a href="products_list.html">数码</a>-->
+										<!--</li>-->
+										<!--<li class="divider"></li>-->
+										<!--<li>-->
+											<!--<a href="products_list.html">母婴</a>-->
+										<!--</li>-->
+										<!--<li class="divider"></li>-->
+									<!--</ul>-->
+								<!--</li>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<a href="#" data-toggle="modal" data-target="#myModal">登录</a>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<a href="index.html">安全退出</a>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<a href="#" data-toggle="modal" data-target="#register">注册</a>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<a href="order_list.html">我的订单</a>-->
+							<!--</li>-->
+							<!--<li>-->
+								<!--<a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"> </span>我的购物车</a>-->
+							<!--</li>-->
+						<!--</ul>-->
+						<!--<div class="input-group col-md-3 pull-right" style="positon:relative;padding: 7px;">-->
+							<!--<input type="text" class="form-control" placeholder="请输入商品名" />-->
+							<!--<span class="input-group-btn">  -->
+					            <!--<button class="btn btn-info btn-search">-->
+					            	<!--<span class="glyphicon glyphicon-search"></span>-->
+					            <!--</button>-->
+							<!--</span>-->
+						<!--</div>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</nav>-->
+		<!--</div>-->
+		<div th:replace="common/header :: header"></div>
 		<!--导航部分 end-->
 
 		<!--最顶端轮播图片 begin-->
-		<div id="gcarouse" class="container">
-			<!--轮播-->
-			<div id="myCarousel" class="carousel slide">
-				<!-- 轮播（Carousel）指标 -->
-				<ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-				</ol>
-				<!-- 轮播（Carousel）项目 -->
-				<div class="carousel-inner">
-					<div class="item active">
-						<a href="details.html"><img src="images/advert1.jpg" class="pull-left" alt="First slide"></a>
-					</div>
-					<div class="item">
-						<a href="details.html"><img src="images/advert2.jpg" class="pull-left" alt="First slide"></a>
-					</div>
-					<div class="item">
-						<a href="details.html"><img src="images/advert3.jpg" class="pull-left" alt="First slide"></a>
-					</div>
-				</div>
-
-				<!-- 轮播（Carousel）导航 -->
-				<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-				<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-			</div>
-		</div>
+		<div th:replace="common/carousel :: carousel"></div>
 		<!--最顶端轮播图片 end-->
 		<!--购物车 begin-->
 		<!--外层div-->
@@ -159,21 +134,30 @@
 								<th><input type="checkbox" id="selectAll" onclick="selectAll(this)"></th>
 								<th id="sequence">序号</th>
 								<th>图片</th>
-								<th>书名</th>
+								<th>商品名</th>
 								<th>单价</th>
 								<th>数量</th>
 								<th>合计</th>
 							</tr>
 						</thead>
 						<tbody id="tby">
-							<tr th:each="cart:${cartList}">
-								<td><input type="checkbox" name="cks"></td>
+							<tr th:each="cart,iter:${cartList}">
+								<td><input type="checkbox" name="cks" th:value="${cart.id}"></td>
 								<td th:text="${cart.thingId}">1001</td>
 								<td><img src="images/tenxunchuan.jpg" th:src="@{'/public/' + ${cart.imgUrl}}"></td>
 								<td th:text="${cart.thingName}">腾讯传</td>
 								<td th:text="${cart.newPrice + '元'}">35.0元</td>
-								<td th:text="${cart.count}">7</td>
-								<td th:text="${cart.newPrice * cart.count}">100$</td>
+
+								<td>
+									<div class='input-group' style='width: 105px;'>
+										<span class='input-group-btn'>
+										<button class='btn btn-default' type='button' th:onclick="minus([[${cart.id}]],[[${cart.newPrice}]],[[${iter.index}]])">-</button>
+										</span><input type='text' th:id="${'cartCount' + iter.index}" class='form-control' th:value="${cart.count}"><span class='input-group-btn'>
+										<button class='btn btn-default' type='button' th:onclick="plus([[${cart.id}]],[[${cart.newPrice}]],[[${iter.index}]])">+</button>
+										</span>
+									</div>
+								</td>
+								<td th:text="${cart.newPrice * cart.count}" th:id="${'cartPrice' + iter.index}">100$</td>
 							</tr>
 
 						</tbody>
@@ -181,16 +165,16 @@
 							<tr>
 								<td colspan="5"></td>
 								<td class="text-success">总价:</td>
-								<td class="text-success">345$:</td>
+								<td class="text-success cartPrice" th:text="${session.userCartInfo.totalPrice}">345</td>
 							</tr>
 							<tr style="background-color: white;">
 								<td>
-									<a href="index.html" class="btn btn-info">&lt;&lt;继续购买</a>
+									<a href="index.html" th:href="@{/prod/index}" class="btn btn-info">&lt;&lt;继续购买</a>
 								</td>
 								<td><button class="btn btn-danger" data-toggle="modal" data-target="#myModal" onclick="del()">删除商品</button></td>
 								<td colspan="4"></td>
 								<td>
-									<a href="confirm_order.html" class="btn btn-warning">结算商品</a>
+									<a href="javascript:void(0)" th:onclick="confirmOrder()" class="btn btn-warning">结算商品</a>
 								</td>
 							</tr>
 						</tfoot>
@@ -206,7 +190,7 @@
 							<div class="modal-content">
 								<div class="modal-header">
 									<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-									<h4 class="modal-title text-warning" id="myModalLabel">抱歉!请您先选择商品!</h4>
+									<h4 class="modal-title text-warning">抱歉!请您先选择商品!</h4>
 								</div>
 								<div class="modal-body">请选进行勾选!再执行删除删除!</div>
 								<div class="modal-footer">
@@ -236,6 +220,23 @@
 						</div>
 					</div>
 					<!--two_del  end-->
+					<!--第三个模态框 开始-->
+					<div id="third_del" style="display: none;">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+									<h4 class="modal-title text-warning">抱歉!请您先选择商品!</h4>
+								</div>
+								<div class="modal-body">请选进行勾选!再执行结算!</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+								</div>
+							</div>
+							<!-- /.modal-content -->
+						</div>
+					</div>
+					<!--第三个模态框 开始-->
 				</div>
 				<!--删除提示模态框 end-->
 			</div>
@@ -247,10 +248,10 @@
 						<a href="# " class="text-success "><span class="glyphicon glyphicon-shopping-cart "></span>我的购物车</a>
 					</li>
 					<li>
-						<a href="# ">3个商品</a>
+						<a href="# " th:text="${session.userCartInfo.num+'个商品'}">3个商品</a>
 					</li>
 					<li>
-						<a href="# ">总价100元</a>
+						<a href="# " th:text="${'总价'+session.userCartInfo.totalPrice+'元'}">总价100元</a>
 					</li>
 				</ol>
 
@@ -260,7 +261,7 @@
 					<div class="row" id="love">
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail">
-								<a href="details.html"><img src="images/cikehuakai.jpg " style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html"><img src="images/cikehuakai.jpg " th:src="@{/images/cikehuakai.jpg}" style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
 									<h3>此刻花开</h3>
 								</div>
@@ -268,7 +269,7 @@
 						</div>
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail ">
-								<a href="details.html"><img src="images/jindumanbu.jpg " style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html"><img src="images/jindumanbu.jpg " th:src="@{/images/jindumanbu.jpg}" style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
 									<h3>京都漫步</h3>
 								</div>
@@ -276,7 +277,7 @@
 						</div>
 						<div class="col-sm-12 col-md-12 wow fadeInRight animated">
 							<div class="thumbnail ">
-								<a href="details.html"><img src="images/lapulasidemonv.jpg" style="height: 200px; " alt="通用的占位符缩略图 "></a>
+								<a href="details.html"><img src="images/lapulasidemonv.jpg" th:src="@{/images/lapulasidemonv.jpg}" style="height: 200px; " alt="通用的占位符缩略图 "></a>
 								<div class="caption ">
 									<h3>拉普拉斯的魔女</h3>
 								</div>
@@ -298,35 +299,10 @@
 
 		<div class="container">
 			<!--首页底部信息 begin-->
-			<div class="container ">
-				<div class="row ">
-					<div class="col-md-offset-2 col-md-8">
-						<div class="row ">
-							<div class="col-md-offset-2 col-md-2">
-								<img src="images/logo.png ">
-							</div>
-							<div class="col-md-6" style="margin-top: 10px;">
-								<div class="row">
-									<div class="col-md-offset-2 col-md-10">
-										<a href="http://www.gem-inno.com/">南昌大学综合实验班&copy;所有</a>
-									</div>
-								</div>
-								<div class="gap"></div>
-								<div class="row">
-									<div class="col-md-offset-2 col-md-10">
-										<span class="text-info">南昌大学&reg; |&nbsp;</span>
-										<span class="text-info"><a href="http://www.xmgc360.com">购物系统</a> |&nbsp;</span>
-										<span class="text-info">2019－2020 </span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			<div th:replace="common/footer :: footer"></div>
 		</div>
 		<!--end-->
-
+		<div th:replace="common/userModal :: userModal"></div>
 		<!--引入js文件-->
 		<script src="dist/js/jquery.min.js" th:src="@{/dist/js/jquery.min.js}"></script>
 		<script src="js/carousel.js" th:src="@{/js/carousel.js}" type="text/javascript" charset="utf-8"></script>
@@ -398,7 +374,7 @@
 					}
 				}
 				if(count == 0) {
-					alert('请选择图书！');
+					alert('请选择商品！');
 					// thirdModel.style.display = "block";
 					// $("#third_del").css("display","block");
 				} else {
