--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -10,125 +10,12 @@
 	</head>
 
 	<body>
-		<!--导航部分  begin-->
-		<div class="container" style="margin-top: 5px;">
-			<nav class="navbar navbar-default well-sm" style="padding-left: 0px;" role="navigation">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
-				            <span class="sr-only">切换导航</span>
-				            <span class="icon-bar"></span>
-				            <span class="icon-bar"></span>
-				            <span class="icon-bar"></span>
-        				</button>
-						<a class="navbar-brand" href="#">购物网</a>
-					</div>
-					<div class="collapse navbar-collapse" id="example-navbar-collapse">
-						<ul class="nav navbar-nav pull-left">
-							<li class="active">
-								<a href="index.html">首页</a>
-							</li>
-					
-							<li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-										商品类型
-										<b class="caret"></b>
-									</a>
-									<ul class="dropdown-menu">
-										<li>
-											<a href="products_list.html">百货</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">美妆</a>
-										</li>
-										<li class="divider"></li>
-										
-										<li>
-											<a href="products_list.html">家具</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">男装</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">女装</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">数码</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">母婴</a>
-										</li>
-										<li class="divider"></li>
-									</ul>
-								</li>
-							</li>
-							<li>
-								<a href="#" data-toggle="modal" data-target="#myModal">登录</a>
-							</li>
-							<li>
-								<a href="index.html">安全退出</a>
-							</li>
-							<li>
-								<a href="#" data-toggle="modal" data-target="#register">注册</a>
-							</li>
-							<li>
-								<a href="order_list.html">我的订单</a>
-							</li>
-							<li>
-								<a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"> </span>我的购物车</a>
-							</li>
-						</ul>
-						<div class="input-group col-md-3 pull-right" style="positon:relative;padding: 7px;">
-							<input type="text" class="form-control" placeholder="请输入商品名" />
-							<span class="input-group-btn">  
-					            <button class="btn btn-info btn-search">
-					            	<span class="glyphicon glyphicon-search"></span>
-					            </button>
-							</span>
-						</div>
-					</div>
-				</div>
-			</nav>
-		</div>
+
+		<div th:replace="common/header :: header"></div>
 		<!--导航部分 end-->
 
 		<!--最顶端轮播图片 begin-->
-		<div id="gcarouse" class="container">
-			<!--轮播-->
-			<div id="myCarousel" class="carousel slide">
-				<!-- 轮播（Carousel）指标 -->
-				<ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-				</ol>
-				<!-- 轮播（Carousel）项目 -->
-				<div class="carousel-inner">
-					<div class="item active">
-						<a href="details.html"><img src="images/advert1.jpg" class="pull-left" alt="First slide"></a>
-					
-					</div>
-					<div class="item">
-						<a href="details.html"><img src="images/advert2.jpg" class="pull-left" alt="First slide"></a>
-						
-					</div>
-					<div class="item">
-						<a href="details.html"><img src="images/advert3.jpg" class="pull-left" alt="First slide"></a>
-					
-					</div>
-				</div>
-
-				<!-- 轮播（Carousel）导航 -->
-				<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-				<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-			</div>
-		</div>
+		<div th:replace="common/carousel :: carousel"></div>
 		<!--最顶端轮播图片 end-->
 
 		<!--外层div-->
@@ -161,40 +48,34 @@
 								</div>
 								<div style="clear: both;">
 									<!--<input type="number" class="form-control" placeholder="请输入" min="1" max="100" onclick="selectByCount(this)">-->
-									<a href="confirm_order.html" class="btn btn-default" role="button">
+									<a  href="javascript:void(0)"  class="btn btn-default" role="button" th:onclick="addCart([[ ${product.id} ]])">
 										<span class="glyphicon glyphicon-usd"></span> 立即购买
 									</a>
-									<a class="btn btn-default" href="javascript:void(0)"
-									   role="button" th:onclick="addCart([[ ${product.id} ]])">
+									<a class="btn btn-default" href="javascript:void(0)" role="button" th:onclick="addCart([[ ${product.id} ]])">
 										<span class="glyphicon glyphicon-shopping-cart"></span> 加入购物车
 									</a>
 								</div>
 								</p>
 							</div>
-
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6">
+						<div class="thumbnail">
 							<ul class="list-group">
-								<li class="list-group-item"><span class="text-success">图书名称:<span
-										th:text="${product.name}">愿你的青春不负梦想</span></span></li>
-								<li class="list-group-item"><span class="text-info">商家:</span><span
-										th:text="${product.bossId}">俞敏洪</span></li>
+								<li class="list-group-item"><span class="text-success">商品名称:<span th:text="${product.name}">愿你的青春不负梦想</span></span></li>
+								<li class="list-group-item"><span class="text-info">商家:</span><span th:text="${product.bossId}">俞敏洪</span></li>
 
-								<li class="list-group-item"><span class="text-info"
-																  style="text-decoration: line-through;">原价:</span><span
-										style="text-decoration: line-through;"
-										th:text="${'$' + product.oldPrice + '元'}">$36元</span></li>
-								<li class="list-group-item"><span class="text-info">现价:</span><span
-										th:text="${'$' + product.newPrice + '元'}">$21.6元</span></li>
-								<li class="list-group-item"><span class="text-info">说明:</span> <span
-										th:text="${product.info}">50年心路历程×25年创业思考×80场演讲精华，与不甘平庸的你，谈谈如何度过不悔的青春，实现你心中的梦想。</span>
-								</li>
+								<li class="list-group-item"><span class="text-info" style="text-decoration: line-through;">原价:</span><span style="text-decoration: line-through;" th:text="${'$' + product.oldPrice + '元'}">$36元</span></li>
+								<li class="list-group-item"><span class="text-info">现价:</span><span th:text="${'$' + product.newPrice + '元'}">$21.6元</span></li>
+								<li class="list-group-item"><span class="text-info">说明:</span> <span th:text="${product.info}">50年心路历程×25年创业思考×80场演讲精华，与不甘平庸的你，谈谈如何度过不悔的青春，实现你心中的梦想。</span></li>
 							</ul>
 						</div>
-
 					</div>
 
 				</div>
-				<!--<hr>-->
-				<!--折叠部分 begin-->
+				<!--<div id="evaluate"></div>-->
+				<hr>
+				折叠部分 begin
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h4 class="panel-title">
@@ -213,7 +94,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="#ios" data-toggle="tab"> <span class="badge pull-right">50</span>累计评价</a>
+									<a href="#ios" data-toggle="tab">累计评价</a>
 								</li>
 							</ul>
 							<div id="myTabContent" class="tab-content">
@@ -224,9 +105,8 @@
 									<div class="row">
 										<div class="col-sm-12 col-md-6">
 											<ul class="nav navbar-collapse" style="line-height: 3;">
-												<li class="text-info">产品名称：愿你的青春不负梦想</li>
-												<li class="text-info">产品名称：<span
-														th:text="${product.name}">愿你的青春不负梦想</span></li>
+
+												<li class="text-info">产品名称：<span th:text="${product.name}">愿你的青春不负梦想</span></li>
 
 												<li class="text-info">市场价: <span th:text="${product.oldPrice + '元'}">36.00元</span>
 												</li>
@@ -241,41 +121,55 @@
 									</div>
 									</p>
 								</div>
+
 								<div class="tab-pane fade" id="ios">
 									<p>
 									<ul class="list-group">
-										<li class="list-group-item"><span class="text-info">小明:</span><span
-												class="text-success ">这真的是一本好书<img src="images/emotions/1.gif "></span>
-										</li>
-										<li class="list-group-item"><span class="text-info">success:</span><span
-												class="text-danger ">书的质量很差<img src="images/emotions/2.gif "></span>
-										</li>
-										<li class="list-group-item"><span class="text-info">叶老师:</span><span
-												class="text-success ">很值得初学者学习<img src="images/emotions/13.gif "></span>
-										</li>
-										<li class="list-group-item"><span class="text-info">amdin:</span><span
-												class="text-danger ">被坑大发了.<img src="images/emotions/17.gif "></span>
-										</li>
-										<li class="list-group-item"><span class="text-info">rose:</span><span
-												class="text-danger ">卖家态度恶劣.<img src="images/emotions/11.gif "></span>
-										</li>
+										<!--<div id="evaluate"></div>-->
+										<div th:each="evaluate:${evaluateList}">
+											<li class="list-group-item">
+												<span class="text-danger " th:text="${evaluate.detail}">书的质量很差<img src="images/emotions/2.gif "></span>
+											</li>
+										</div>
+
+										<!--<li class="list-group-item"><span class="text-info">叶老师:</span><span-->
+												<!--class="text-success ">很值得初学者学习<img src="images/emotions/13.gif "></span>-->
+										<!--</li>-->
+										<!--<li class="list-group-item"><span class="text-info">amdin:</span><span-->
+												<!--class="text-danger ">被坑大发了.<img src="images/emotions/17.gif "></span>-->
+										<!--</li>-->
+										<!--<li class="list-group-item"><span class="text-info">rose:</span><span-->
+												<!--class="text-danger ">卖家态度恶劣.<img src="images/emotions/11.gif "></span>-->
+										<!--</li>-->
 									</ul>
 									</p>
-									<p>
-									<ul class="pager">
-										<li>
-											<a href="# ">&larr;上一页</a>
-											<a href="# ">下一页 &rarr;</a>
-										</li>
-									</ul>
-									</p>
+									<div  class="input-group col-md-12  " align="center">
+										<form method="post">
+											<input type="text" name="evaluateinfo" id="evaluateinfo">
+											<button class="btn btn-info btn-search " >
+												<a th:onclick="doevaluate([[${product.id}]])">提交评价</a>
+											</button>
+
+											<!--<input class="btn btn-info btn-search"type="button" value="提交评价">-->
+
+										</form>
+									</div>
+									<!--<p>-->
+									<!--<ul class="pager">-->
+										<!--<li>-->
+											<!--<a href="# ">&larr;上一页</a>-->
+											<!--<a href="# ">下一页 &rarr;</a>-->
+										<!--</li>-->
+									<!--</ul>-->
+									<!--</p>-->
 								</div>
+
 							</div>
 							<!--tab选项卡 end-->
 						</div>
 					</div>
 				</div>
-				<!--折叠部分end-->
+				折叠部分end
 			</div>
 
 			<!--右边-->
@@ -339,32 +233,10 @@
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="col-md-offset-2 col-md-8">
-					<div class="row">
-						<div class="col-md-offset-2 col-md-2">
-							<img src="images/logo.png">
-						</div>
-						<div class="col-md-6" style="margin-top: 10px;">
-							<div class="row">
-								<div class="col-md-offset-2 col-md-10">
-									<a href="http://www.gem-inno.com/">南昌大学综合实验班&copy;所有</a>
-								</div>
-							</div>
-							<div class="gap"></div>
-							<div class="row">
-								<div class="col-md-offset-2 col-md-10">
-									<span class="text-info">南昌大学&reg; |&nbsp;</span>
-									<span class="text-info"><a href="http://www.xmgc360.com">购物系统</a> |&nbsp;</span>
-									<span class="text-info">2019－2020 </span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			<div th:replace="common/footer :: footer"></div>
 		</div>
-
+		<!--登陆模态框-->
+		<div th:replace="common/userModal :: userModal"></div>
 
 		<script src="dist/js/jquery.min.js" th:src="@{/dist/js/jquery.min.js}"></script>
 		<script src="js/carousel.js" th:src="@{/js/carousel.js}" type="text/javascript" charset="utf-8"></script>
@@ -380,8 +252,13 @@
 			if(!(/msie [6|7|8|9]/i.test(navigator.userAgent))) {
 				new WOW().init();
 			};
+			function buildQuery(productId) {
+				var query = {};
 
-			//进入购物车
+				query.productid = productId;
+				return query;
+			}
+
 			function addCart(productId) {
 				//验证购买图书数量
 				var productNum = $("#productCount").val();
@@ -409,7 +286,32 @@
 					}
 				})
 			}
+			function doevaluate(productId) {
+				var evaluateinfo = $("#evaluateinfo").val();
+				if(user == '' || user == null){
+					alert("请先登录！");
+					return ;
+				}
+				if(evaluateinfo==''){
+					alert("请输入内容！");
+					return;
+				}
+				$.ajax({
+					type: "POST",
+					url:contextPath+ "/eval/add",
+					data:{'evaluateinfo':evaluateinfo,'productId':productId},
+					success:function (data) {
+						if(data == '100'){
+							alert("未购买此物品");
+							window.location.href = contextPath + "/prod/detail?id="+productId;
+						}else{
+							alert("评价成功");
+							window.location.href = contextPath + "/prod/detail?id="+productId;
+						}
+					}
+				});
 
+			}
 		</script>
 	</body>
 </html>
