--- a/src/main/resources/templates/products_list.html
+++ b/src/main/resources/templates/products_list.html
@@ -9,124 +9,11 @@
 	
 	</head>
 	<body>
-		<!--导航部分  begin-->
-		<div class="container" style="margin-top: 5px;">
-			<nav class="navbar navbar-default well-sm" style="padding-left: 0px;" role="navigation">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
-				            <span class="sr-only">切换导航</span>
-				            <span class="icon-bar"></span>
-				            <span class="icon-bar"></span>
-				            <span class="icon-bar"></span>
-        				</button>
-						<a class="navbar-brand" href="#">购物网</a>
-					</div>
-					<div class="collapse navbar-collapse" id="example-navbar-collapse">
-						<ul class="nav navbar-nav pull-left">
-							<li class="active">
-								<a href="index.html">首页</a>
-							</li>
-					
-							<li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-										商品类型
-										<b class="caret"></b>
-									</a>
-									<ul class="dropdown-menu">
-										<li>
-											<a href="products_list.html">百货</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">美妆</a>
-										</li>
-										<li class="divider"></li>
-										
-										<li>
-											<a href="products_list.html">家具</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">男装</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">女装</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">数码</a>
-										</li>
-										<li class="divider"></li>
-										<li>
-											<a href="products_list.html">母婴</a>
-										</li>
-										<li class="divider"></li>
-									</ul>
-								</li>
-							</li>
-							<li>
-								<a href="#" data-toggle="modal" data-target="#myModal">登录</a>
-							</li>
-							<li>
-								<a href="index.html">安全退出</a>
-							</li>
-							<li>
-								<a href="#" data-toggle="modal" data-target="#register">注册</a>
-							</li>
-							<li>
-								<a href="order_list.html">我的订单</a>
-							</li>
-							<li>
-								<a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"> </span>我的购物车</a>
-							</li>
-						</ul>
-						<div class="input-group col-md-3 pull-right" style="positon:relative;padding: 7px;">
-							<input type="text" class="form-control" placeholder="请输入商品名" />
-							<span class="input-group-btn">  
-					            <button class="btn btn-info btn-search">
-					            	<span class="glyphicon glyphicon-search"></span>
-					            </button>
-							</span>
-						</div>
-					</div>
-				</div>
-			</nav>
-		</div>
+
+		<div th:replace="common/header :: header"></div>
 		<!--导航部分 end-->
 		<!--最顶端轮播图片 begin-->
-		<div id="gcarouse" class="container">
-			<!--轮播-->
-			<div id="myCarousel" class="carousel slide">
-				<!-- 轮播（Carousel）指标 -->
-				<ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-				</ol>
-				<!-- 轮播（Carousel）项目 -->
-				<div class="carousel-inner">
-								<div class="item active">
-						<a href="details.html"><img src="images/advert1.jpg" class="pull-left" alt="First slide"></a>
-					
-					</div>
-					<div class="item">
-						<a href="details.html"><img src="images/advert2.jpg" class="pull-left" alt="First slide"></a>
-						
-					</div>
-					<div class="item">
-						<a href="details.html"><img src="images/advert3.jpg" class="pull-left" alt="First slide"></a>
-					
-					</div>
-				</div>
-
-				<!-- 轮播（Carousel）导航 -->
-				<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-				<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-			</div>
-		</div>
+		<div th:replace="common/carousel :: carousel"></div>
 		<!--最顶端轮播图片 end-->
 		<div class="container">	
 			<ol class="breadcrumb">
@@ -144,33 +31,10 @@
 		<!--地址-->
 		<div class="container">
 		<hr>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-offset-2 col-md-8">
-						<div class="row">
-							<div class="col-md-offset-2 col-md-2">
-								<img src="images/logo.png">
-							</div>
-							<div class="col-md-6" style="margin-top: 10px;">
-								<div class="row">
-									<div class="col-md-offset-2 col-md-10">
-										<a href="http://www.gem-inno.com/">南昌大学综合实验班&copy;所有</a>
-									</div>
-								</div>
-								<div class="gap"></div>
-								<div class="row">
-									<div class="col-md-offset-2 col-md-10">
-										<span class="text-info">南昌大学&reg; |&nbsp;</span>
-										<span class="text-info"><a href="http://www.xmgc360.com">购物系统</a> |&nbsp;</span>
-										<span class="text-info">2019－2020 </span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			<div th:replace="common/footer :: footer"></div>
 		</div>
+		<!--登陆模态框-->
+		<div th:replace="common/userModal :: userModal"></div>
 		<!--end-->
 		<script src="dist/js/jquery.min.js" th:src="@{/dist/js/jquery.min.js}"></script>
 		<script src="js/carousel.js" th:src="@{/js/carousel.js}" type="text/javascript" charset="utf-8"></script>
